# site_vicjon

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: workflow_ci_django.yml
infra_project/: apps.py  urls.py  views.py
infra_project/templates/infra_codigo/: index.html  style.css
project/: settings.py  urls.py
